# torando-gui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  release.yml
backend/torando_gui/: __init__.py  __main__.py  app.py  config.py  desktop.py  dns.py  engine.py  firewall.py  geoip.py  launcher.py  mmdb.py  netcfg.py  netcheck.py  pf.py  platform.py  server.py  services.py  socks.py  torctl.py  winfw.py
backend/torando_gui/webroot/: app.css  app.js  index.html  worldmap.js
docs/: PERFORMANCE.md  SECURITY.md  USAGE.md
packaging/: AppRun  PKGBUILD  _common.sh  build-appimage.sh  build-bsd.sh  build-deb.sh  build-macos.sh  build-rpm.sh  build-tarball.sh  build-windows.sh  guix.scm  torando-gui-shepherd.scm  torando-gui.spec
packaging/desktop/: torando-gui.desktop
packaging/freebsd/: torando-gui.rc
packaging/geo/: gen_worldmap.py
packaging/icons/: make_icon.py
packaging/macos/: Info.plist  app-launcher.sh  co.securityops.torando-gui.plist  install.sh  torando-gui.rb  uninstall.sh
packaging/openbsd/: torando-gui.rc
packaging/polkit/: 49-torando-gui.rules  co.securityops.torando-gui.policy
packaging/systemd/: torando-gui.service
packaging/windows/: install.ps1  torando-gui.cmd  torando-guid.cmd  torrc.template  uninstall.ps1
packaging/windows/boot/: daemon.py  gui.py
tests/: conftest.py  test_app.py  test_config.py  test_dns.py  test_engine.py  test_engine_v6.py  test_firewall.py  test_geoip.py  test_mmdb.py  test_netcfg.py  test_netcheck.py  test_paths.py  test_pf.py  test_platform.py  test_server.py  test_socks.py  test_winfw.py
