# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cristian Cezar Moisés — AGPL-3.0-only
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torando-gui"
version = "1.0.1"
description = "Web GUI to route a Linux user's egress through Tor (transparent proxy + killswitch)"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "Cristian Cezar Moisés" }]
keywords = ["tor", "privacy", "transparent-proxy", "anonymity", "killswitch"]
dependencies = []

[project.urls]
Homepage = "https://codeberg.org/cristiancmoises/torando-gui"
Repository = "https://codeberg.org/cristiancmoises/torando-gui"
"Source (GitHub mirror)" = "https://github.com/cristiancmoises/torando-gui"
"Source (Forgejo)" = "https://git.securityops.co/cristiancmoises/torando-gui"
Issues = "https://codeberg.org/cristiancmoises/torando-gui/issues"

[project.scripts]
torando-gui = "torando_gui.launcher:main"
torando-guid = "torando_gui.__main__:main"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["torando_gui*"]

[tool.setuptools.package-data]
torando_gui = ["webroot/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4", "SIM"]
ignore = ["S101"]  # asserts are expected in the test-suite

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "SIM"]
