# SPDX-License-Identifier: AGPL-3.0-only
# Copyright (c) 2026 Cristian Cezar Moisés — AGPL-3.0-only
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "torando-gui"
version = "1.3.0"
description = "Native desktop app to route a user's egress through Tor with a fail-closed killswitch (Linux/macOS/BSD/Windows)"
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "Cristian Cezar Moisés" }]
keywords = [
    "tor", "privacy", "transparent-proxy", "anonymity", "killswitch",
    "gtk", "desktop", "pf", "iptables", "macos", "windows", "bsd",
]
dependencies = []

# The daemon is pure-stdlib. The native desktop window additionally needs the
# GTK4 + WebKitGTK stack via PyGObject; without it the launcher opens the UI in
# a browser instead. GTK4/WebKitGTK themselves are system libraries (install via
# your distro: gir1.2-gtk-4.0 + gir1.2-webkit-6.0, gtk4 + webkitgtk6.0, …).
[project.optional-dependencies]
gui = ["PyGObject>=3.50"]

[project.urls]
Homepage = "https://github.com/cristiancmoises/torando-gui"
"Source (Forgejo, official)" = "https://git.securityops.co/cristiancmoises/torando-gui"
"Source (GitHub mirror)" = "https://github.com/cristiancmoises/torando-gui"
"Source (Codeberg mirror)" = "https://codeberg.org/berkeley/torando-gui"
Issues = "https://github.com/cristiancmoises/torando-gui/issues"

[project.scripts]
torando-gui = "torando_gui.launcher:main"
torando-guid = "torando_gui.__main__:main"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["torando_gui*"]

[tool.setuptools.package-data]
torando_gui = ["webroot/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4", "SIM"]
ignore = ["S101"]  # asserts are expected in the test-suite

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "SIM"]
